Update tests and schemas
